# 5G-WAVE-Infocom2024

./: .gitignore  LICENSE  README.md
RedirectionProxy/: Dockerfile  RedirectionProxy.py
dummyOAI/: dummyOAI.py
initContainer/: Dockerfile  init.sh
oaideployment/: download_images.sh  run_all.sh
oaideployment/charts/: collect_logs.sh  slice_confxl_nodeplog.sh  undeploy_all.sh
oaideployment/charts/oai-amf/: values.yaml
oaideployment/charts/oai-ausf/: values.yaml
oaideployment/charts/oai-gnb/: values.yaml
oaideployment/charts/oai-gnbsim/: values.yaml
oaideployment/charts/oai-nrf/: values.yaml
oaideployment/charts/oai-smf/: values.yaml
oaideployment/charts/oai-spgwu-tiny/: values.yaml
oaideployment/charts/oai-udm/: values.yaml
oaideployment/charts/oai-udr/: values.yaml
oaideployment/deplogs/: create_plots.py  create_plots_new.py  final_parser.py  mean_finder.py  parse_rplogs.py  parse_wavelogs.py  runner.sh  topscript.sh
oaimods/oai-cn5g-ausf/: CHANGELOG.md
oaimods/oai-cn5g-smf/: CHANGELOG.md
oaimods/oai-cn5g-udm/: CHANGELOG.md
oaimods/oai-cn5g-udr/: CHANGELOG.md
waveSCPbase/: Dockerfile
waveSCPbase/deployment/: 01_multus.yaml  04_deployment.yaml  deploy.sh  kustomization.yaml
waveSCPbase/scripts/: createAtt.sh  createEnt.sh  createProof.sh  verifyAtt.sh  verifyProof.sh
waveSCPbase/src/: CMakeLists.txt  dependencies.sh  main.cpp
waveSCPbase/src/app/: CMakeLists.txt  functions.cpp  functions.hpp  handlers.cpp  handlers.hpp
waveServers/: Dockerfile-waved  Dockerfile-waveps  deploy.sh  waved.yaml  waveps.yaml
(+128 files in other folders)
